--- a/frontend/Home.html
+++ b/frontend/Home.html
@@ -18,7 +18,7 @@
       <div class="solid-circle"></div>
       <div class="header-home">
       <h5 class="m-0">Expense Tracker<img src="./expensetracker.jpeg" alt="" width="35px" ></h5>
-      <button class="btn  btn-md" id="click-here-button">Click here</button>
+      
     </div>
     <div class="main-content"> 
       <h3>Hello<img src="./wave.png"alt=""width="35px">,please enter your 
@@ -33,7 +33,7 @@
 
     </div>
     <a href="./Tracker.html"></a>
-      <button class="btn btn-sm" id="login-button">Login</button>
+      <button class="btn btn-sm" id="login-button">Click Here</button>
 </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
